# inithook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  attach-gdb.sh  attach-libnamed.sh  attach.sh  build.sh  depcheck.sh  install-data.sh  symbolize-crash-log.sh
.circleci/: config.yml
config_data/: rich_presence.txt
data/menu/: menu.xml  nullified-ui.xml  player-list-window.xml
data/menu/nullifiedcat/: aimbot.xml  antiaim.xml  chat.xml  crits.xml  debug.xml  hackinfo.xml  misc.xml  movement.xml  triggerbot.xml  visuals.xml  warp.xml
data/menu/nullifiedcat/misc/: collective.xml  utilities.xml
data/menu/nullifiedcat/visuals/: chams.xml  chamshaders.xml  colors.xml  esp.xml  glow.xml  playerinfo.xml  uicolors.xml  world.xml
include/: DetourHook.hpp  DynamicBytepatch.hpp  MiscTemporary.hpp  PlayerTools.hpp  bytepatch.hpp  common.hpp  config.h.in  crits.hpp  entitycache.hpp  globals.h  hack.hpp  helpers.hpp  hooks.hpp  ipc.hpp  itemtypes.hpp  localplayer.hpp  navparser.hpp  playerlist.hpp  sconvars.hpp  soundcache.hpp  tfmm.hpp  timer.hpp  trace.hpp  votelogger.hpp
include/copypasted/: CSignature.h
include/core/: interfaces.hpp  logging.hpp  netvars.hpp  offsets.hpp
include/hacks/: Aimbot.hpp  AntiAim.hpp  AntiAntiAim.hpp  Backtrack.hpp  CMakeLists.txt  CatBot.hpp  DataCenter.hpp  Trigger.hpp  Votekicks.hpp  Warp.hpp  hacklist.hpp
include/hacks/visual/: ESP.hpp
include/hooks/: HookTools.hpp  HookedMethods.hpp  Think.hpp
include/reclasses/: CTFInventoryManager.hpp  CTFPartyClient.hpp  CTFPlayerShared.hpp  C_BaseEntity.hpp  reclasses.hpp
include/sdk/: CGameRules.h  netmessage.hpp
include/settings/: Settings.hpp
include/visual/: colors.hpp  drawing.hpp
include/visual/imgui/: imrenderer.hpp
include/visual/menu/menu/: StaticTextComponent.hpp  TextComponent.hpp  tinyxml2.hpp
include/visual/menu/menu/object/input/: Slider.hpp  Spinner.hpp
src/: CMakeLists.txt  CaptureLogic.cpp  EventLogging.cpp  MiscTemporary.cpp  PlayerTools.cpp  chatlog.cpp  crits.cpp  entitycache.cpp  entityhitboxcache.cpp  globals.cpp  hack.cpp  helpers.cpp  hitrate.cpp  hooks.cpp  ipc.cpp  ipctriggers.cpp  itemtypes.cpp  localplayer.cpp  navparser.cpp  nospread.cpp  playerlist.cpp  playerresource.cpp  prediction.cpp  projlogging.cpp  sconvars.cpp  targethelper.cpp  textmode.cpp  tfmm.cpp  trace.cpp  votelogger.cpp
src/core/: entry.cpp  interfaces.cpp  logging.cpp  netvars.cpp
src/hacks/: Aimbot.cpp  Announcer.cpp  AntiAim.cpp  AntiAntiAim.cpp  AntiBackstab.cpp  AntiDisguise.cpp  AntiPazer.cpp  AntiTaunt.cpp  AutoDeadringer.cpp  AutoDetonator.cpp  AutoHeal.cpp  AutoItem.cpp  AutoJoin.cpp  AutoLeader.cpp  AutoReflect.cpp  AutoSticky.cpp  AutoTaunt.cpp  BPExpander.cpp  Backtrack.cpp  Bunnyhop.cpp  CMakeLists.txt  CatBot.cpp  ChargeAimbot.cpp  CritSay.cpp  DataCenter.cpp  FollowBot.cpp  Identify.cpp  Misc.cpp  NavBot.cpp  Noisemaker.cpp  PartyBypass.cpp  Spam.cpp  Trigger.cpp  UberSpam.cpp  Votekicks.cpp  Warp.cpp
src/hacks/visual/: CMakeLists.txt  DominateMark.cpp  ESP.cpp  KillFeedColor.cpp  Killstreak.cpp  MiscPlayerInfo.cpp  Radar.cpp  SkinChanger.cpp  SpyAlert.cpp  Thirdperson.cpp
src/hooks/: CMakeLists.txt  CreateMove.cpp  DispatchUserMessage.cpp  GetFriendPersonaName.cpp  GetUserCmd.cpp  HookTools.cpp  IsPlayingTimeDemo.cpp  LevelInit.cpp  LevelShutdown.cpp  Paint.cpp  RunCommand.cpp  SendDatagram.cpp  SendNetMsg.cpp  Shutdown.cpp  nographics.cpp
src/hooks/textmode/: CMakeLists.txt  DrawModelExecute.cpp
src/hooks/visual/: CMakeLists.txt  DrawModelExecute.cpp  FrameStageNotify.cpp  OverrideView.cpp  PaintTraverse.cpp  SDL_GL_SwapWindow.cpp  SDL_PollEvent.cpp
src/reclasses/: CMakeLists.txt  CTFInventoryManager.cpp  CTFLobbyShared.cpp  CTFPartyClient.cpp  C_BaseEntity.cpp
src/sdk/: CMakeLists.txt  checksum_crc.cpp  netmessage.cpp
src/settings/: Manager.cpp  SettingCommands.cpp  SettingsIO.cpp
src/visual/: CMakeLists.txt  EffectGlow.cpp  colors.cpp  drawing.cpp  drawmgr.cpp
src/visual/imgui/: imrenderer.cpp
src/visual/menu/: GuiInterface.cpp
src/visual/menu/menu/: Menu.cpp  ObjectFactory.cpp
src/visual/menu/menu/objects/: Option.cpp  TabButton.cpp  Tooltip.cpp
src/visual/menu/menu/objects/container/: Box.cpp  ModalContainer.cpp  TabSelection.cpp  Table.cpp
src/visual/menu/menu/objects/input/: Checkbox.cpp  ColorSelector.cpp  InputKey.cpp  Select.cpp  Slider.cpp  StringInput.cpp  TextInput.cpp
src/visual/menu/menu/special/: PlayerListController.cpp  VariableListEntry.cpp
src/visual/menu/menu/wm/: Task.cpp  TaskBar.cpp  WMWindow.cpp  WindowCloseButton.cpp  WindowHeader.cpp
