target_sources(cathook PRIVATE
        "${CMAKE_CURRENT_LIST_DIR}/AutoJoin.cpp"
		"${CMAKE_CURRENT_LIST_DIR}/Announcer.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AutoLeader.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/CatBot.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/Votekicks.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/Spam.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AutoItem.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/Aimbot.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AntiAim.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AntiAntiAim.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AntiBackstab.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AntiDisguise.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AntiTaunt.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AntiPazer.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AutoBackstab.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AutoDeadringer.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AutoDetonator.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AutoHeal.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AutoReflect.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AutoSticky.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/AutoTaunt.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/BPExpander.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/Bunnyhop.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/Backtrack.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/CritSay.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/DataCenter.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/FollowBot.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/KillSay.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/DominateSay.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/Misc.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/MVMTools.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/NavBot.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/Noisemaker.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/PureBypass.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/Trigger.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/UberSpam.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/Identify.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/PartyBypass.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/Warp.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/ChargeAimbot.cpp")

if(EnableVisuals)
    add_subdirectory(visual)
endif()
